# auto_udevrule

./: CMakeLists.txt  README.md  getudev  getudev-ubuntu  helper_writer  libauto_udevrule.so.0.1.6  libauto_udevrule.so.1.1.0  testline  testlist2  udevinfo
include/: device_enum.h  device_enum.hpp  lua_config.h  lua_config.hpp  manager.h  manager.hpp  sub_process_writer.hpp  sudo_manager.h  sudo_manager.hpp  time_checker.h  time_checker.hpp  udev_maker.h  udev_maker.hpp  usb_checker.h  usb_info_confirmer.hpp
ref/: config.lua.back  list_file  temp_script.sh
src/: lua_config.cpp  main.cpp  manager.cpp  sub_process_writer.cpp  sudo_manager.cpp  time_checker.cpp  udev_maker.cpp  usb_checker.cpp  usb_info_confirmer.cpp
sub-src/: helper_writer.cpp
